Fix dark mode UI issues (#958)

--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -552,6 +552,16 @@ html.dark-mode .uiInputLabelLabel {
 	color: var(--base-seventy) !important;
 }
 
+/* Settings */
+html.dark-mode ._6ct8._6y58 {
+	color: var(--base-seventy) !important;
+}
+
+/* Active status Learn More */
+html.dark-mode ._6ct7._6y57 {
+	filter: invert(1);
+}
+
 /* Send cash dialog background */
 html.dark-mode ._49no,
 html.dark-mode ._2z8r {
@@ -663,6 +673,11 @@ html.dark-mode ._53ij ._3rh0 {
 	background: var(--list-header-color) !important;
 }
 
+/* Gaming message title */
+html.dark-mode ._79da._2p_c {
+	color: var(--base-seventy);
+}
+
 /* Gaming popover content */
 html.dark-mode ._53ij ._4lh2 {
 	background: var(--container-color) !important;
@@ -761,6 +776,16 @@ html.dark-mode ._2u_d a {
 	filter: invert(1);
 }
 
+/* Reply message icon */
+html.dark-mode ._7i2n {
+	filter: invert(1);
+}
+
+/* More message icon */
+html.dark-mode ._7i2l {
+	filter: invert(1);
+}
+
 /* "Delete message" popup */
 html.dark-mode ._7492 {
 	color: var(--base-fifty);
@@ -842,7 +867,8 @@ html.dark-mode ._1p1u ._1p1v {
 
 /* Invert the top left sidebar buttons */
 html.dark-mode ._30yy._6ymd._2agf,
-html.dark-mode ._30yy._6-xp._6-xq {
+html.dark-mode ._30yy._6-xp._6-xq,
+html.dark-mode ._30yy._6-xf._6-xg {
 	filter: invert(1);
 }
 
